--- a/main.ipynb
+++ b/main.ipynb
@@ -7,31 +7,44 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "tarefas = []\n",
+    "\n",
+    "\n",
     "def main():\n",
     "    print(\"Bem vindo ao Sistema de Gerenciamento de Tarefas.\")\n",
     "    while True:\n",
-    "        print(\"\\nMenu:\")\n",
-    "        print(\"1. Adicionar Tarefa\")\n",
-    "        print(\"2. Visualizar Tarefas\")\n",
-    "        print(\"3. Marcar Tarefa como Concluída\")\n",
-    "        print(\"4. Remover Tarefa\")\n",
-    "        print(\"5. Sair\")\n",
-    "\n",
+@@ -20,9 +23,10 @@
     "        escolha = input(\"Digite o número que corresponde a opção desejada: \")\n",
     "\n",
     "        if escolha == '1':\n",
     "            print(\"Funcionalidade escolhida foi 'Adicionar Tarefa' \")\n",
+    "            descricao = input(\"Digite a descrição da tarefa: \")\n",
+    "            adicionar_tarefa(descricao)\n",
     "        elif escolha == '2':\n",
     "            print(\"Funcionalidade escolhida foi 'Visualizar Tarefas'\")\n",
+    "            visualizar_tarefas()\n",
     "        elif escolha == '3':\n",
     "            print(\"Funcionalidade escolhida foi 'Marcar Tarefa como concluída'\")\n",
     "        elif escolha == '4':\n",
-    "            print(\"Funcionalidade escolhida foi 'Remover Tarefa'\")\n",
-    "        elif escolha == '5':\n",
-    "            print(\"Saindo do Sistema! Até breve!\")\n",
+@@ -32,25 +36,40 @@
     "            break\n",
     "        else:\n",
     "            print(\"Opção inválida! Por favor, tente novamente\")\n",
+    "\n",
+    "\n",
+    "def adicionar_tarefa(descricao):\n",
+    "    tarefas.append({\"descricao\": descricao, \"concluida\": False})\n",
+    "    print(f\"Tarefa '{descricao}' adicionada com sucesso!\")\n",
+    "\n",
+    "\n",
+    "def visualizar_tarefas():\n",
+    "    if not tarefas:\n",
+    "        print(\"Nenhuma tarefa foi encontrada!\")\n",
+    "        return\n",
+    "    print(\"\\nLista de Tarefas:\")\n",
+    "    for i, tarefa in enumerate(tarefas):\n",
+    "        status = \"[X]\" if tarefa[\"concluida\"] else \"[ ]\"\n",
+    "        print(f\"{i + 1}. {status} {tarefa['descricao']}\")\n",
     "\n"
    ]
   },
