--- a/main.ipynb
+++ b/main.ipynb
@@ -13,7 +13,13 @@
     "def main():\n",
     "    print(\"Bem vindo ao Sistema de Gerenciamento de Tarefas.\")\n",
     "    while True:\n",
-@@ -20,9 +23,10 @@
+    "        print(\"\\nMenu:\")\n",
+    "        print(\"1. Adicionar Tarefa\")\n",
+    "        print(\"2. Visualizar Tarefas\")\n",
+    "        print(\"3. Marcar Tarefa como Concluída\")\n",
+    "        print(\"4. Remover Tarefa\")\n",
+    "        print(\"5. Sair\")\n",
+    "\n",
     "        escolha = input(\"Digite o número que corresponde a opção desejada: \")\n",
     "\n",
     "        if escolha == '1':\n",
@@ -26,7 +32,9 @@
     "        elif escolha == '3':\n",
     "            print(\"Funcionalidade escolhida foi 'Marcar Tarefa como concluída'\")\n",
     "        elif escolha == '4':\n",
-@@ -32,25 +36,40 @@
+    "            print(\"Funcionalidade escolhida foi 'Remover Tarefa'\")\n",
+    "        elif escolha == '5':\n",
+    "            print(\"Saindo do Sistema! Até breve!\")\n",
     "            break\n",
     "        else:\n",
     "            print(\"Opção inválida! Por favor, tente novamente\")\n",
