--- a/main.ipynb
+++ b/main.ipynb
@@ -23,14 +23,18 @@
     "        escolha = input(\"Digite o número que corresponde a opção desejada: \")\n",
     "\n",
     "        if escolha == '1':\n",
-    "            print(\"Funcionalidade escolhida foi 'Adicionar Tarefa' \")\n",
     "            descricao = input(\"Digite a descrição da tarefa: \")\n",
     "            adicionar_tarefa(descricao)\n",
     "        elif escolha == '2':\n",
-    "            print(\"Funcionalidade escolhida foi 'Visualizar Tarefas'\")\n",
     "            visualizar_tarefas()\n",
     "        elif escolha == '3':\n",
     "            print(\"Funcionalidade escolhida foi 'Marcar Tarefa como concluída'\")\n",
+    "            visualizar_tarefas()\n",
+    "            try:\n",
+    "                indice = int(input(\"Digite o número da tarefa que você deseja marcar como concluída: \")) - 1\n",
+    "                marcar_concluida(indice)\n",
+    "            except ValueError:\n",
+    "                print(\"Entrada inválida! Por favor digite um número: \")\n",
     "        elif escolha == '4':\n",
     "            print(\"Funcionalidade escolhida foi 'Remover Tarefa'\")\n",
     "        elif escolha == '5':\n",
@@ -53,6 +57,14 @@
     "    for i, tarefa in enumerate(tarefas):\n",
     "        status = \"[X]\" if tarefa[\"concluida\"] else \"[ ]\"\n",
     "        print(f\"{i + 1}. {status} {tarefa['descricao']}\")\n",
+    "\n",
+    "\n",
+    "def marcar_concluida(indice):\n",
+    "    if 0 <= indice < len(tarefas):\n",
+    "        tarefas[indice][\"concluida\"] = True\n",
+    "        print(f\"Tarefa '{tarefas[indice]['descricao']}' foi marcada como concluída!\")\n",
+    "    else:\n",
+    "        print(\"Índice de tarefa inválido!\")\n",
     "\n"
    ]
   },
