--- a/main.ipynb
+++ b/main.ipynb
@@ -28,7 +28,6 @@
     "        elif escolha == '2':\n",
     "            visualizar_tarefas()\n",
     "        elif escolha == '3':\n",
-    "            print(\"Funcionalidade escolhida foi 'Marcar Tarefa como concluída'\")\n",
     "            visualizar_tarefas()\n",
     "            try:\n",
     "                indice = int(input(\"Digite o número da tarefa que você deseja marcar como concluída: \")) - 1\n",
@@ -37,6 +36,12 @@
     "                print(\"Entrada inválida! Por favor digite um número: \")\n",
     "        elif escolha == '4':\n",
     "            print(\"Funcionalidade escolhida foi 'Remover Tarefa'\")\n",
+    "            visualizar_tarefas()\n",
+    "            try:\n",
+    "                indice = int(input(\"Digite o número da tarefa que você quer remover: \")) - 1\n",
+    "                remover_tarefa(indice)\n",
+    "            except ValueError:\n",
+    "                print(\"Entrada inválida! Por favor digite um número: \")\n",
     "        elif escolha == '5':\n",
     "            print(\"Saindo do Sistema! Até breve!\")\n",
     "            break\n",
@@ -65,6 +70,14 @@
     "        print(f\"Tarefa '{tarefas[indice]['descricao']}' foi marcada como concluída!\")\n",
     "    else:\n",
     "        print(\"Índice de tarefa inválido!\")\n",
+    "\n",
+    "\n",
+    "def remover_tarefa(indice):\n",
+    "    if 0 <= indice < len(tarefas):\n",
+    "        descricao = tarefas.pop(indice)[\"descricao\"]\n",
+    "        print(f\"Tarefa '{descricao}' foi removida com sucesso!\")\n",
+    "    else:\n",
+    "        print(\"Índice de Tarefa inválido!\")\n",
     "\n"
    ]
   },
